settings-ui/src/components/BoxBtn.sass
.boxBtn
    user-select: none
    background-color: var(--colour-secondary)
    display: flex
    justify-content: center
    flex-direction: column
    gap: 0.2em
    align-items: center
    border-radius: 1em
    cursor: pointer
    svg
        stroke: var(--colour-primary)
        g
            fill: var(--colour-primary)

    &.active
        border: 4px solid darken(#4C8CD4, 10%)
        padding: -5px
        filter: brightness(130%)

    &.disabled
        span
            color: #7c7c7c
        background-color: #353844
        pointer-events: none

    @media (hover: hover)
        &:hover
            filter: brightness(1.3)

.sizeHack
    span
        font-size: 0.8em

.boxBtnLabel
    color: var(--colour-primary)
    font-weight: bold

.btnRow
    display: flex
    gap: 1em

